# grounded-knowledge-platform

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_INSTRUCTIONS.md  DIST_INFO.json  Makefile  README.md  RUNBOOK.md  SECURITY.md  cloudbuild.yaml  compose.yml  harness.toml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml
agents/: README.md
app/: __init__.py  answering.py  auth.py  bigquery_export.py  bootstrap.py  cli.py  config.py  embeddings.py  eval.py  index_maintenance.py  ingestion.py  main.py  maintenance.py  metadata.py  migrations_runner.py  observability.py  ocr.py  otel.py  ratelimit.py  retrieval.py  retrieval_profile.py  safety.py  safety_eval.py  storage.py  tenant.py  version.py
docker/: Dockerfile
docs/: BIGQUERY_MODELING.md  CONTRACTS.md  COST_HYGIENE.md  DATA_CONTRACTS.md  DEPLOYMENT_MODEL.md  DEPLOY_GCP.md  DESIGN.md  DEV_SETUP_MACOS.md  DOMAIN.md  DRIFT_DETECTION.md  EVAL_DATASETS.md  IAM_STARTER_PACK.md  MANUAL_DEPLOY_GCP_CLOUD_RUN.md  OBSERVABILITY.md  RELEASES.md  ROADMAP.md  STYLE.md  TEAM_WORKFLOW.md  TUTORIAL.md  WIF_GITHUB_ACTIONS.md  WORKFLOW.md  public-demo-checklist.md
scripts/: backlog_audit.py  ci.sh  clean.sh  deploy_cloud_run_demo.sh  deploy_smoke.py  doctor.sh  eval_smoke_gate.py  export_github_issues.py  generate_execution_queue.py  generate_task_index.py  harness.py  package_repo.py  prepare_codex_prompt.py  release_tools.py  run_local.sh
tests/: conftest.py  test_audit_events.py  test_auth.py  test_bigquery_export.py  test_cloudsql_postgres.py  test_cloudsql_runtime.py  test_connectors_gcs_sync_api.py  test_cost_guardrails.py  test_csv_ingest.py  test_data_contracts.py  test_demo_mode_invariants.py  test_deploy_smoke.py  test_doc_update_api.py  test_eval_dataset_validation.py  test_eval_runs.py  test_ingest_directory_api.py  test_ingest_lineage.py  test_ingestion_runs.py  test_ingestion_validation.py  test_metrics.py  test_multitenancy_rbac.py  test_otel.py  test_postgres_migrations.py  test_pubsub_push_ingest.py  test_query_explain.py  test_release_tools.py  test_replay_backfill.py  test_retention_enforcement.py  test_retention_purge.py  test_retrieval_profile.py  test_retrieval_tuning.py  test_safety_detection.py  (+7 more)
(+251 files in other folders)
