[project]
name = "grounded-knowledge-platform"
version = "0.10.0"
description = "Citations-first, eval-driven grounded knowledge (RAG) reference implementation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryne Schroder" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "python-multipart>=0.0.9",
  "pydantic>=2.5",
  "numpy>=1.24",
  "rank-bm25>=0.2.2",
  "httpx>=0.27",
  # PDF + OCR (open source, fully local)
  "pymupdf>=1.24",
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  # Spreadsheet ingestion
  "openpyxl>=3.1",
]

[project.optional-dependencies]
providers = [
  "openai>=1.0",
  "google-genai>=0.3",
]

embeddings = [
  "sentence-transformers>=5.2.2",
]

observability = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-exporter-gcp-trace>=1.9.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

cloudsql = [
  "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
